--- a/tex/config/commands.tex
+++ b/tex/config/commands.tex
@@ -1,6 +1,7 @@
 \DeclareSIUnit\parsec{pc}
 \DeclareSIUnit\year{yr}
 \newcommand{\sol}{\odot}
+\DeclareSIUnit\solarmass{M_\sol}
 
 \newcommand{\describe}[2]{
 	\begin{description}
