--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -6,8 +6,6 @@
 
 We want to include baryons in the study of non-linear structure formation.
 
-% TODO figure big bang againg
-
 \paragraph{Evolution}
 Before recombination and decoupling, the baryons were an ionized plasma.
 
@@ -51,8 +49,13 @@ Unlike dark matter, baryons are collisional, and their dynamics include various 
 	\item Astrophysical effect: ex. supernova explosions, active galactic nuclei
 \end{itemize}
 The dynamics of baryons is more complicated than that of dark matter.
+\Cref{fig:illustris-evolution} shows the evolution of dark matter and ordinary matter from a simulation.
 
-% TODO illustris simulation
+\begin{figure}
+	\includegraphics[width=\textwidth]{img/ch-05/illustris-evolution.png}
+	\caption{The evolution of dark matter and ordinary matter from the illustris simulation.}
+	\label{fig:illustris-evolution}
+\end{figure}
 
 Generally, some baryons tend to sink to the bottom of potential wells, driven by dark matter on small scales, because baryons have dissipation.
 
@@ -72,6 +75,15 @@ The energy that is produced is transported outwards by photons to the star's out
 We have already seen that $M_\sol \approx \SI{2e30}{\kg}$.
 
 \subsection{Composition}
+\begin{table}
+	\begin{tabular}{lccccccccc}
+	\toprule
+	Element & H & He & C & N & O & Ne & Mg & Si & Fe\\
+	\midrule
+	$(N/N_H) \cdot 10^5$ & $10^5$ & 9800 & 36.3 & 11.2 & 85.1 & 12.3 & 3.80 & 3.55 & 4.68\\
+	\bottomrule
+	\end{tabular}
+\end{table}
 The solar composition is shown in TODO.
 % Pridmorial: 25% He, only traces of heavier elements
 Apparently, the abundance of helium and heavier elements in the sun is different from the primordial abundance.
@@ -79,14 +91,40 @@ This is because heavier elements are produced by nuclear reactions in stars.
 To characterize these abundances, we define the \emph{metallicity} $z$, which is the mass faction of elements heavier than helium.
 For the sun, $z_\sol \approx \SI{2}{\percent}$.
 
+\subsection{Classification}
+\begin{margintable}
+	\begin{tabular}{ll}
+		\toprule
+		Class & $T$ [K]\\
+		\midrule
+		O & \num{28000}--\num{50000}\\
+		B & \num{10000}--\num{28000}\\
+		A & \num{7500}--\num{10000}\\
+		F & \num{6000}--\num{7500}\\
+		G & \num{5000}--\num{6000}\\
+		K & \num{3500}--\num{5000}\\
+		M & \num{2500}--\num{3500}\\
+		\bottomrule
+	\end{tabular}
+	\caption{The spectral type as a function of temperature.}
+	\label{tab:spectral-type}
+\end{margintable}
+The modern classification system for stars is the MK classification.
 
-Stellar types are classified based on their surface temperature, which is shown in TODO.
-The spectra of different types are shown in TODO.
+The spectral classification is a single letter for rough classification, followed optionally by a single number for finer classification.
+\cref{tab:spectral-type} shows the temperature of stars with different spectral types.
 
 \subsection{Hertzsprung-Russel diagram}
 
-TODO figure.
+The Hertzsprung-Russell (HR) diagram in \cref{fig:hr-gaia} shows the relationship between surface temperature and luminosity of stars in our galaxy.
 
+\begin{figure}
+	\includegraphics[width=\textwidth]{img/ch-05/hr-gaia.png}
+	\caption{The Hertzsprung-Russell diagram, as measured by the GAIA satellite.}
+	\label{fig:hr-gaia}
+\end{figure}
+
+The evolution of stars can be tracked on the HR diagram.
 Stars are born on the main sequence (MS).
 The phenomenological \emph{initial mass function} (IMF) is the distribution of newly born stars of the MS.
 Eventually, they have burned all their hydrogen and start moving away from the MS towards the red giant branch (RGB).
@@ -99,6 +137,213 @@ This process is called enrichment of the ISM.
 \subsection{Galaxies}
 Galaxies contain many stars, so they can be used to track the stellar evolution.
 Because the massive blue stars burn their fuel first, new galaxies are blue, and old galaxies are red.
+
+
+\section{Classification of galaxies}
+
+\begin{figure}
+	\includegraphics[width=\textwidth]{img/ch-05/tuning-fork.jpg}
+	\caption{The Hubble tuning fork diagram classifies galaxies according to their shape.}
+\end{figure}
+
+There is a wide range of types of galaxies.
+A common classification is the Hubble sequence, also known as the tuning fork diagram, which is shown in \cref{fig:tuning-fork}.
+The Hubble sequence distinguishes:
+\begin{itemize}
+	\item Elliptical galaxies have a smooth elliptical light distribution. They are subdivided into E0 (spherical) to E7 (very flat).
+	\item Spiral galaxies have a disk with spiral arms, and a central halo.
+	\begin{itemize}
+		\item Normal spiral galaxies go from Sa (tight spiral) to Sc (loose spiral).
+		\item Barred spiral galaxies go from SBa (tight spiral) to SBc (loose spiral).
+	\end{itemize}
+	\item Lenticular galaxies (S0) are an intermediate step between ellipticals and spirals.
+\end{itemize}
+There are also other types of galaxies which are not on the Hubble sequence:
+\begin{itemize}
+	\item Irregular galaxies have irregular shapes.
+	\item Peculiar galaxies have odd shapes and are often associated with mergers.
+	\item Dwarf galaxies are galaxies with luminosities fainter than $M_B = -18$.
+	\item Active galactic nuclei are very bright nuclei that can be found in some galaxies. They may be the only part of an otherwise faint galaxy that is visible to us.
+\end{itemize}
+
+Elliptical galaxies are called \enquote{early types}, and spirals are called \enquote{late types}.
+The nomenclature is historical and is not related to the formation history.
+
+
+
+% 5.4
+\section{Elliptical galaxies}
+Elliptical galaxies tend to be regular, with a smooth elliptical light distribution.
+
+\paragraph*{Surface brightness}
+The surface brightness of elliptical galaxies is well fit by a \emph{Sersic profile},
+\begin{align*}
+	I(R)
+	&= I_0 \exp\Bigg[ - \beta_n \left( \frac{R}{R_e}  \right)^{1/n} \Bigg],
+\end{align*}
+where $m$ is the Sersic index,
+$R$ is the semi-major axis length,
+$R_e$ is the half-light radius,
+and it follows that $\beta_n \approx 2 n - 0.324$ to fulfill this criterion.
+The brighter galaxies have a larger value of $n$.
+For normal ellipticals, $n \approx 4$, for which the profile is also called a \emph{de Vaucouleurs profile}.
+
+\paragraph*{Shape}
+Let $b/a$ be the ratio of minor to major axis of the light distribution.
+For normal ellipticals, $b/a \in [0.3, 1]$.
+In the Hubble sequence, this corresponds to types E0 to E7.
+
+\paragraph*{Colour}
+Ellipticals tend to be redder than spirals, which indicates an older, metal-rich star population.
+Some ellipticals have colour gradients, such that the central regions tend to be redder.
+
+\paragraph*{Kinematics}
+The support against gravitational collapse is mostly provided by random motion.
+The rotational velocities are comparatively small.
+
+
+\paragraph{Scaling relations}
+There is a correlation between some of the main characteristics of ellipticals.
+Let $\sigma$ be the line of sight velocity dispersion of stars inside the half-light radius $R_e$,
+and let $\avg{I}_l$ be the main surface brightness within $R_e$.
+\Cref{fig:correlation} shows the \emph{fundamental plane}, which which quantifies the correlation between these parameters.
+% TODO
+The correlation between $\avg{I_l}$ and $\sigma$ is called \emph{Faber-Jackson relation}.
+The correlation between $R_e$ and $\sigma$ is called the \emph{$D_n$-$\sigma$ relation}, whose name comes from an other measure for radius, $D_n$.
+
+
+\paragraph*{Gas content}
+Very little cold gas, with temperatures less than \SI{100}{\kelvin}, is contained in ellipticals.
+As a result, new stars are not forming, which explains the old stellar population.
+Hot gas with temperatures around \SI{e7}{\kelvin} is much more abundant, and can be found with x-ray observations.
+There is also a little warm gas, with temperature \SI{e4}{\kelvin}.
+
+
+
+
+
+
+
+\section{Spiral galaxies}
+% TODO figure
+Spiral galaxies, like the Milky Way in \cref{fig:mw-structure}, show a spiral structure when viewed face-on, and look like a flat disk with a central bulge edge-on.
+Not depicted is the dark matter halo, which surrounds and includes the visible structure.
+
+\paragraph{Surface brightness}
+The disks of spiral galaxies are well fitted by an exponential profile,
+\begin{align*}
+	I(R)
+	&= I_0 \exp\left( -\frac{R}{R_d} \right),
+\end{align*}
+which is a Sersic profile with Sersic index $n=1$,
+and $R_e \approx 1.67 R_d$.
+More luminous spirals usually have larger radii.
+Bulges are also well fitted by a Sersic profile, with $n = 4$ for large bulges, down to $n=1$ for smaller ones.
+
+\paragraph*{Colour}
+Spirals tend to be blue, which indicates a younger and still forming stellar population in the disk.
+More luminous disks tend to be redder.
+The star formation rate $\dot{M}_* = \dv{M_*}{t}$, where $M_*$ is the total mass of stars in a galaxy, varies considerably between galaxies.
+Galaxies with very high star formation rates are called \emph{Starburst galaxies}.
+
+The stellar haloes are mostly made up of old metal-poor stars.
+More than half of all spiral galaxies have a bar.
+The spiral arms are typically bluer and contain regions of star formation.
+
+\paragraph{Gas content}
+Spirals have mostly cold gas in the disk, which gives them a reservoir for star formation.
+
+\paragraph*{Kinematics}
+The disks in spirals are rotationally supported, with approximately circular orbits for stars and gas.
+According to Newtonian gravity, the rotational velocity $v_\text{rot}$ of a star at radius $r$ can be found as follows:
+\begin{align*}
+	F &= ma\\
+	\implies \frac{G m M(r)}{r^2} &= m \frac{v_\text{rot}^2}{r}\\
+	\implies v_\text{rot} &= \sqrt{\frac{G M(r)}{r}}.
+\end{align*}
+% TODO rotation curve of NGC 3198
+The rotational velocity rises quickly and then remains flat, which cannot be explained from the visible matter alone, since we would expect a fall-off of the rotational velocity along with the brightness profile.
+Apparently, there must be another invisible contribution to the mass, which comes from the dark matter halo.
+For $v_\text{rot}$, we need $M(r) \propto r$, which implies $\rho(r) \propto r^{-2}$.
+The NFW profile at intermediate radii is a good model for this.
+
+\paragraph*{Scaling relations}
+The correlation between the maximal rotational velocity $v_\text{max}$ and the luminosity $L$ is well fitted by
+\begin{align*}
+	L = A v_\text{max}^\alpha, 
+	\qquad \text{with } \alpha \in [2.5, 4],
+\end{align*}
+which is called the \emph{Tully-Fisher relation}.
+
+
+
+
+\section{Dwarf galaxies}
+Dwarf galaxies are galaxies with low luminosities, such that $M_B \geq - 18$.
+\Cref{fig:dwarfs} shows that they can have diverse structures, and they can be separated into different subtypes.
+\begin{itemize}
+	\item Dwarf galaxies that are gas rich, show strong star formation, and have irregular shapes are called \emph{Dwarf irregulars}, dIrr.
+	\item Dwarf galaxies that are gas poor, without young stars, and with regular structures, are subdivided into \emph{Dwarf ellipticals}, dE, and the fainter Dwarf spheroidals, dSph.
+\end{itemize}
+
+
+\section{Active galactic nuclei}
+Active galactic nuclei (AGN) are very luminous centres that can be found in some galaxies.
+They have a spectrum that is very different from what you would expect from stellar sources, since they emit strongly from the radio to the gamma ray part of the spectrum.
+AGN also contain strong emission lines in their spectra.
+There are a variety of subclasses, such as Seyfert galaxies, quasars, blazars, radio AGN, and liners.
+
+% TODO rewrite causally
+The emission comes from a very compact region, and is variable on time scales of days.
+The emission region must be smaller than $c \delta t$, which is a few light days.
+
+The AGN are powered accretion onto a supermassive black hole (SMBH) with masses around \SIrange{e6}{e9}{\solarmass}.
+These can be very efficient in converting gravitational energy into radiation.
+The wide range of types of AGNs can be squeezed reasonably well into a unification model, which states that they are all similar kinds of objects, but viewed from different angles.
+
+Most galaxies have an SMBH at their centre, but they are not necessarily active.
+The SMBH grows as gas accretes, and reinjects energy into the IGM.
+
+\section{Statistical properties of the galaxy population}
+
+\subsection{Luminosity function}
+The luminosity function $\phi(L) \dd{L}$ is defined as the number density of galaxies with luminosities between $L$ and $L + \dd{L}$.
+For a wide range of galaxies, a \emph{Schechter function} is a good fit:
+\begin{align*}
+	\phi(L) \dd{L}
+	&= \phi^* \left( \frac{L}{L^*} \right)^\alpha
+	\exp\left( - \frac{L}{L^*} \right)
+	\frac{\dd{L}}{L^*},
+\end{align*}
+where
+$L^*$ is a characteristic luminosity,
+$\alpha$ is the faint end slope,
+and $\phi^*$ is a normalization factor.
+% TODO figure
+In \cref{fig:lum-func}, the luminosity function has been fitted to experimental data.
+
+\subsection{Colour distribution}
+The color-magnitude diagram for galaxies is shown in \cref{fig:cm-galaxies}.
+% TODO figure
+There are two maxima in the distribution.
+In the upper mid, there is the red sequence, which consists of bright red galaxies.
+The blue sequence in the lower left consists of faint blue galaxies.
+
+\subsection{Mass-Metalicity}
+Spiral galaxies with large total stellar masses $M_*$ tend to have higher metalicities.
+
+\subsection{Clustering}
+Galaxies in denser regions are redder.
+Equivalently, elliptical galaxies are more clustered than spiral galaxies.
+% TODO figure
+The fraction of different kinds of galaxies is shown as a function of density.
+
+
+
+
+
+
+
 
 
 
