--- a/tex/config/tref.tex
+++ b/tex/config/tref.tex
@@ -2,9 +2,15 @@
 \AtEndOfPackage{
 	\crefname{enumi}{}{}
 	\crefname{marginfigure*}{fig.}{fig.}
+	\Crefname{marginfigure*}{Fig.}{Fig.}
 	\crefname{marginfigure}{fig.}{fig.}
+	\Crefname{marginfigure}{Fig.}{Fig.}
 	\crefname{figure}{fig.}{fig.}
+	\Crefname{figure}{Fig.}{Fig.}
 	\crefname{figure*}{fig.}{fig.}
+	\Crefname{figure*}{Fig.}{Fig.}
+	\Crefname{margintable}{Table}{Tables}
+	\Crefname{margintable*}{Table}{Tables}
 }
 
 \RequirePackage{cleveref}
