--- a/tex/config/preamble.tex
+++ b/tex/config/preamble.tex
@@ -17,6 +17,9 @@
 
 \definecolor{primary_color}{RGB}{214,35,0}
 
+\usepackage{biblatex}
+\addbibresource{tex/back/bibliography.bib}
+
 
 
 \usepackage{tabu} % tables
