Add images in 5

--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -205,15 +205,13 @@ The rotational velocities are comparatively small.
 \subsection{Scaling relations}
 \begin{figure}
 	\includegraphics[width=0.7\textwidth]{img/ch-05/fundamental-plane.png}
-	\caption{The fundamental plane for elliptical galaxies. The view is chosen such that the plane is seen edge-on as a line.}
+	\caption{The fundamental plane for elliptical galaxies, from \cite{Magoulas:2012jy}. The view is chosen such that the plane is seen edge-on as a line.}
 	\label{fig:fundamental-plane}
 \end{figure}
 There is a correlation between some of the main characteristics of ellipticals.
 Let $\sigma$ be the line of sight velocity dispersion of stars inside the half-light radius $R_e$,
 and let $\avg{I}_l$ be the main surface brightness within $R_e$.
 \Cref{fig:fundamental-plane} shows the \emph{fundamental plane}, which which quantifies the correlation between these parameters.
-% \sidecite{Magoulas:2012jy}
-% TODO
 The correlation between $\avg{I_l}$ and $\sigma$ is called \emph{Faber-Jackson relation}.
 The correlation between $R_e$ and $\sigma$ is called the \emph{$D_n$-$\sigma$ relation}, whose name comes from an other measure for radius, $D_n$.
 
@@ -332,8 +330,12 @@ where
 $L^*$ is a characteristic luminosity,
 $\alpha$ is the faint end slope,
 and $\phi^*$ is a normalization factor.
-% TODO figure
 In \cref{fig:lum-func}, the luminosity function has been fitted to experimental data.
+\begin{figure}
+	\includegraphics[width=0.7\textwidth]{img/ch-05/luminosity-function.pdf}
+	\caption{The r-band SDSS DR6 Luminosity Function for blue and red galaxies separately, from \cite{Montero_Dorta_2009}. The Stepwise Maximum Likelihood Luminosity Function estimates are shown in diamonds. The dashed line represents the best-fit Schechter function. Shaded regions represent the $1 \sigma$ uncertainty.}
+	\label{fig:lum-func}
+\end{figure}
 
 \subsection{Colour distribution}
 \begin{marginfigure}
@@ -352,8 +354,12 @@ Spiral galaxies with large total stellar masses $M_*$ tend to have higher metali
 \subsection{Clustering}
 Galaxies in denser regions are redder.
 Equivalently, elliptical galaxies are more clustered than spiral galaxies.
-% TODO figure
-The fraction of different kinds of galaxies is shown as a function of density.
+The fraction of different kinds of galaxies is shown as a function of density in \cref{fig:clustering}
+\begin{marginfigure}
+	\includegraphics[width=\textwidth]{img/ch-05/clustering.pdf}
+	\caption{The fraction of galaxies as a function of morphological density for the D80 55 cluster sample, from \cite{Dressler_1997}.}
+	\label{fig:clustering}
+\end{marginfigure}
 
 
 
